tests/machine/x/rb/group_by_multi_join_sort.error
error: /workspace/mochi/tests/machine/x/rb/group_by_multi_join_sort.rb:182:in `block in <main>': undefined local variable or method `g' for main:Object (NameError)

	], { 'select' => ->(c, o, l, n){ [c, o, l, n] }, 'where' => ->(c, o, l, n){ (((o.o_orderdate >= start_date) && (o.o_orderdate < end_date)) && (l.l_returnflag == "R")) }, 'sortKey' => ->(c, o, l, n){ (-_sum(((g)).map { |x| (x.l.l_extendedprice * ((1 - x.l.l_discount))) })) } })
	                                                                                                                                                                                                                ^
	from /workspace/mochi/tests/machine/x/rb/group_by_multi_join_sort.rb:139:in `block in _query'
	from /workspace/mochi/tests/machine/x/rb/group_by_multi_join_sort.rb:139:in `map'
	from /workspace/mochi/tests/machine/x/rb/group_by_multi_join_sort.rb:139:in `_query'
	from /workspace/mochi/tests/machine/x/rb/group_by_multi_join_sort.rb:178:in `<main>'
180: 		{ 'items' => lineitem, 'on' => ->(c, o, l){ (l.l_orderkey == o.o_orderkey) } },
181: 		{ 'items' => nation, 'on' => ->(c, o, l, n){ (n.n_nationkey == c.c_nationkey) } }
182: 	], { 'select' => ->(c, o, l, n){ [c, o, l, n] }, 'where' => ->(c, o, l, n){ (((o.o_orderdate >= start_date) && (o.o_orderdate < end_date)) && (l.l_returnflag == "R")) }, 'sortKey' => ->(c, o, l, n){ (-_sum(((g)).map { |x| (x.l.l_extendedprice * ((1 - x.l.l_discount))) })) } })
183: 	_groups = _group_by(_rows, ->(c, o, l, n){ OpenStruct.new(c_custkey: c.c_custkey, c_name: c.c_name, c_acctbal: c.c_acctbal, c_address: c.c_address, c_phone: c.c_phone, c_comment: c.c_comment, n_name: n.n_name) })
184: 	_res = []
